HelloUltraviolet/Fixtures/RejectedSource/Comptime/SpliceTypeMismatch/Expected.uv
//! Expected diagnostic metadata for the SpliceTypeMismatch rejected-source specimen.

expectedDiagnostic("E-CTE-0230", "requirement.22.SpliceContextAndTypeCompatibility")
